--- a/src/button/index.css
+++ b/src/button/index.css
@@ -5,7 +5,7 @@
     margin: 24px auto 0;
     padding: 0 16px;
     outline: 0;
-    height: 32px;
+    text-align: left;
     line-height: 32px;
     font-family: 'Ubuntu', sans-serif;
     border-radius: 3px;
@@ -23,7 +23,8 @@
 }
 
 .button .button-text {
-    line-height: 32px;
+    line-height: 20px;
+    text-align: left;
     font-size: 12px;
     font-weight: 600;
     letter-spacing: .025em;
